# eie_nrf52840_2026

./: .clang-format
Util/: c_to_mp3.py  mp3_to_c.py  slot_spin_audio.h  slot_win_audio.h
app/: CMakeLists.txt  prj.conf
app/assets/: song.h
app/src/: CMakeLists.txt  main.cpp
app/src/BLE/: BLE.cpp  BLE.h  CMakeLists.txt
app/src/BLE/AudioService/: Audio.cpp  Audio.h
app/src/BLE/ControllerService/: Controller.cpp  Controller.h
app/src/Game/: CMakeLists.txt  Graphic.cpp  Graphic.h
app/src/Game/SlotMachine/: slot_machine.cpp  slot_machine.h  slot_machine_logic.cpp  slot_machine_logic.h
speaker/: audio_module.py  ble_module.py  controller_module.py  main.py  pyproject.toml  speaker.py
